# CPPU-ISA-Simulator

./: .gitignore  CMakeLists.txt  README.md
assembly/: exchange_sort.asm  matrix_multiply.asm
benchmarks/: exchange_sort.asm  matrix_multiply.asm  simple_test.asm
include/: system_constants.h
src/: CMakeLists.txt  main.cpp
src/alu/: ALU.cpp  ALU.h
src/assembler/: CMakeLists.txt  assembler.cpp  assembler.h
src/control/: control.cpp  control.h
src/gui/: mainwindow.cpp  mainwindow.h
src/memory/: CMakeLists.txt  Cache.cpp  Cache.h  Memory.cpp  Memory.h  Register.cpp  Register.h  cache_line.cpp  cache_line.h  cache_set.cpp  cache_set.h  utils.cpp  utils.h
src/pipeline/: CMakeLists.txt  five_stage_pipeline.cpp  five_stage_pipeline.h  instruction_helpers.cpp  instruction_helpers.h  no_pipeline_exec.cpp  no_pipeline_exec.h  pipeline_registers.h
tests/: CMakeLists.txt
